# agrosnab-v1.0

./: .dockerignore  .env.example  .gitignore  BUSINESS_LOGIC.md  CRM_IMPLEMENTATION.md  DOCUMENTATION.md  Dockerfile  PRESENTATION.md  PROJECT_ASSESSMENT.md  README.md  SYSTEM_OVERVIEW.md  docker-compose.yml  index.html  openmemory.md  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
app/: ai_manager.py  cart_store.py  cdek.py  config.py  invoice.py  keyboards.py  main.py  main_old.py  models.py  sheets.py  utils.py
app/handlers/: __init__.py  ai.py  cart.py  catalog.py  common.py  start.py
app/services/: __init__.py  cart_service.py  product_service.py
app/storage/: __init__.py  cart.py  chat_history.py  crm.py  db.py
app/tests/: conftest.py  test_cart_store.py  (+1 more)
docs/: CLIENT_GUIDE.md  index.html
google-apps-script/: Code.gs
owner_bot/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
owner_bot/app/: CLAUDE.md  __init__.py  cloudinary_client.py  config.py  crm_db.py  drive.py  intake_parser.py  keyboards.py  main.py  models.py  monitoring.py  photo_enhance.py  photo_quality.py  security.py  sheets.py
owner_bot/app/handlers/: __init__.py  critical.py  crm.py  health.py  intake.py  orders.py  products.py  start.py  stock.py
owner_bot/app/handlers/products/: __init__.py  archive.py  card.py  confirmation.py  correction.py  navigation.py  search.py  states.py  writeoff.py
owner_bot/app/services/: __init__.py  intake_service.py  product_service.py
owner_bot/app/sheets/: __init__.py  cache.py  client.py  constants.py  crm.py  logging.py  models.py  products.py  utils.py
owner_bot/app/storage/: __init__.py  intake_sessions.py
owner_bot/tests/: __init__.py  conftest.py  test_intake_flow.py  test_intake_parser.py  test_photo_enhance.py  test_photo_quality.py  test_security.py  test_sheets_operations.py  test_sheets_self_heal.py  test_sku_generator.py  test_stock_archive.py  test_stock_correction.py  test_stock_writeoff.py
owner_bot/tmp/: .keep
sitemahorkaproject/: .env.production  .gitignore  openmemory.md  vite.config.ts
src/: App.tsx  index.css
tests/: conftest.py  test_ai_manager.py  test_cart_store.py  test_cdek.py  test_cdek_demo.py  test_crm.py  test_invoice.py  test_keyboards.py  test_services.py  test_sheets.py  test_utils.py
(+34 files in other folders)
