[project]
name = "excel-telegram-bot-starter"
version = "0.1.0"
description = "Telegram bot starter with Google Sheets integration"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (test mocking)
    "E712",   # comparison to True/False (test style)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise-without-from-inside-except
    "SIM105", # use contextlib.suppress (keeps explicit try/except clearer)
    "C416",   # unnecessary dict comprehension (preference)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
